@@ -35,6 +35,7 @@
 23. Show search, and add, podcast actions even if there are no current podcasts.
 24. When DSTM is changed in player settings dialog, only update icon in queue
     and now-playing if its the current player.
+25. When changing DSTM, if player is in a sync group then update all members.
 
 1.7.1
 -----
